fix display picture issue on mobile

--- a/app/assets/stylesheets/about_contact.scss
+++ b/app/assets/stylesheets/about_contact.scss
@@ -1,9 +1,10 @@
 .dp-container{
-  margin: none;
+  max-width: 65%;
+  margin: auto;
   border: none;
   .display-picture{
-    width: 60%;
-    max-height: 90%;
+    max-width: 80%;
+    max-height: 100%;
     margin: auto;
     overflow: hidden;
     border-style: solid;
